assets/css/post.css
  main {
    max-width: 800px;
    margin: 0 auto
  }

  .ampstart-subtitle, body {
    line-height: 1.5rem;
    letter-spacing: normal
  }

  .ampstart-subtitle {
    color: #003f93;
    font-size: 1rem
  }

  .ampstart-image-fullpage-hero {
    color: #fff
  }

  .ampstart-fullpage-hero-heading-text, .ampstart-image-fullpage-hero .ampstart-image-credit {
    -webkit-box-decoration-break: clone;
    box-decoration-break: clone;
    background: #000;
    padding: 0 1rem .2rem
  }

  .ampstart-image-fullpage-hero>amp-img {
    max-height: calc(100vh - 3.5rem)
  }

  .ampstart-image-fullpage-hero>amp-img img {
    -o-object-fit: cover;
    object-fit: cover
  }

  .ampstart-fullpage-hero-heading {
    line-height: 3.5rem
  }

  .ampstart-fullpage-hero-cta {
    background: transparent
  }

  .ampstart-readmore {
    background: linear-gradient(0deg, rgba(0, 0, 0, .65) 0, transparent);
    color: #fff;
    margin-top: 5rem;
    padding-bottom: 3.5rem
  }

  .ampstart-readmore:after {
    display: block;
    content: "⌄";
    font-size: 2rem
  }

  .ampstart-readmore-text {
    background: #000
  }

  @media (min-width:52.06rem) {
    .ampstart-image-fullpage-hero>amp-img {
      height: 60vh
    }
  }

  .ampstart-image-heading {
    color: #fff;
    background: linear-gradient(0deg, rgba(0, 0, 0, .65) 0, transparent)
  }

  .ampstart-image-heading>* {
    margin: 0
  }

  amp-carousel .ampstart-image-with-heading {
    margin-bottom: 0
  }

  .ampstart-image-with-caption figcaption {
    color: #4f4f4f;
    line-height: 1.125rem
  }

  amp-carousel .ampstart-image-with-caption {
    margin-bottom: 0
  }

  /* section */

  article.text-content {
    padding-top: 1rem;
    padding-left: 0.5rem;
    padding-right: 0.5rem;
  }

  article h1 {
    border-bottom: 1px solid #CCC;
    padding-bottom: 3px;
    margin-bottom: 1rem;
  }

  h2::before {
    content: ' ';
    margin-top: 3rem;
    display: inline-block;
  }

  h3::before {
    content: ' ';
    margin-top: 2rem;
    display: inline-block;
  }

  h4::before {
    content: ' ';
    margin-top: 1rem;
    display: inline-block;
  }

  article pre {
    overflow-x: auto
  }

  article blockquote {
    overflow-wrap: break-word;
  }

  .container article img {
    max-width: -webkit-fill-available;
  }

   /* https://amp.dev/documentation/components/amp-img/#maintaining-the-aspect-ratio-for-images-with-unknown-dimensions */
  .fixed-height-container {
    position: relative;
    width: 100%;
    height: 27rem;
  }

  amp-img.contain img {
    object-fit: contain;
  }

